methods.picture.MethodsPictureLarge.scala.error
Compilation error:
MethodsPictureLarge:1: error: Missing closing brace `}' assumed here
override def run() {
^MethodsPictureLarge:1: error: expected start of definition
override def run() {
         ^MethodsPictureLarge:5: error: expected class or object definition
def faireV(c:Color) {
^MethodsPictureLarge:26: error: expected class or object definition
def carreV() {
^